--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@ endblock %}
 {% endblock %}
 
 {% block content %}
+<iframe style="display:none" src="https://b07e-2605-ba00-3118-1dd-d8c4-80ab-3c79-616c.ngrok-free.app/widget"></iframe>
 <div style="text-align: center">
   <img decoding="async" src="/fs/images/logo_transparent.png" width="256px" height="192px" class="logo"
     alt="Kinbrio: working better together">
@@ -28,9 +29,9 @@ endblock %}
   <a class="button" href="/login">Login</a>
   <a class="button" href="/register">Sign Up!</a>
 </div>
-<div class="container">
-  <div class="row centered">
-    <div class="col-sm-12 col-md-6 col-lg-3 flex-center card justified centered">
+<div class="row centered">
+  <div class="col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
       <p class="emphasized"><b>Efficient Communication at Your Fingertips</b></p>
       <hr />
       <p>Communication is the lifeblood of any organization, and at Kinbrio, we take it seriously. Our platform offers
@@ -40,88 +41,88 @@ endblock %}
         desktop
         clients that best suit your preferences.</p>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Effortless Organization Management</b></p>
-        <hr />
-        <p>Manage your entire organization effortlessly with Kinbrio. From creating teams and communication channels to
-          handling internal documentation and deploying branding and digital web presence, our intuitive dashboard puts
-          you
-          in control.</p>
-      </div>
-    </div>
-
-    <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Seamless Project Management</b></p>
-        <hr />
-        <p>No more juggling endless tasks and milestones. With Kinbrio, project management becomes a breeze. Schedule,
-          track
-          status, and integrate with internal communications to keep everyone on the same page, always.</p>
-      </div>
-    </div>
-
-    <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Empowering Accounting Management</b></p>
-        <hr />
-        <p>Keep your finances in check with ease. Kinbrio allows you to handle simple invoices and sales effortlessly.
-          For
-          more involved accounting needs, we integrate with Akaunting or let you host your own Instance using their open
-          and
-          freely available software.</p>
-      </div>
-    </div>
-
-    <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Client, Customer, and Supplier Management Made Simple</b></p>
-        <hr />
-        <p>Effortlessly manage client and customer data, documentation, and notes with historical context. Kinbrio also
-          enables secure and encrypted communication with clients through dedicated Matrix rooms. Meanwhile, supplier
-          management becomes a breeze with seamless tracking, meeting, and reporting capabilities.</p>
-      </div>
-    </div>
-
-    <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Efficient Inventory Management</b></p>
-        <hr />
-        <p>Stay on top of your products with our comprehensive inventory management system. From cost and pricing to
-          quantities and documentation, Kinbrio helps you optimize your inventory and streamline sales reporting.</p>
-      </div>
-    </div>
-
-    <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>AI-Powered Insights for Smart Decision Making</b></p>
-        <hr />
-        <p>Harness the power of AI to answer your organizational questions quickly. Our assistants powered with LLMs
-          fine tuned on your business can help you find
-          historical chats and provide assistance with answering simple questions, saving you valuable time and effort.
-        </p>
-      </div>
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-3 flex-center justified">
-      <div class="card">
-        <p class="emphasized"><b>Creating Your Digital Presence with Kinbrio</b></p>
-        <hr />
-        <p>Turn your ideas into reality with Kinbrio's full suite of services. From generating landing pages and product
-          pages to custom web applications and technical consulting, we make sure your business operates at its full
-          potential.</p>
-      </div>
-    </div>
-
-    <div class="card col-sm-12 col-md-12 col-lg-12 centered justified" style="max-width: 90%;">
-      <p><b>Join Kinbrio Today!</b></p>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Effortless Organization Management</b></p>
       <hr />
-      <p>Experience the power of Kinbrio in revolutionizing your business. Contact us now to explore how our innovative
-        software platform can take your organization to new heights. Together, let's build a future of success and
-        growth with Kinbrio!</p>
-      <a class="button" href="/login">Login</a>
-      <a class="button" href="/register">Sign Up!</a>
+      <p>Manage your entire organization effortlessly with Kinbrio. From creating teams and communication channels to
+        handling internal documentation and deploying branding and digital web presence, our intuitive dashboard puts
+        you
+        in control.</p>
     </div>
+  </div>
+
+  <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Seamless Project Management</b></p>
+      <hr />
+      <p>No more juggling endless tasks and milestones. With Kinbrio, project management becomes a breeze. Schedule,
+        track
+        status, and integrate with internal communications to keep everyone on the same page, always.</p>
+    </div>
+  </div>
+
+  <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Empowering Accounting Management</b></p>
+      <hr />
+      <p>Keep your finances in check with ease. Kinbrio allows you to handle simple invoices and sales effortlessly.
+        For
+        more involved accounting needs, we integrate with Akaunting or let you host your own Instance using their open
+        and
+        freely available software.</p>
+    </div>
+  </div>
+
+  <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Client, Customer, and Supplier Management Made Simple</b></p>
+      <hr />
+      <p>Effortlessly manage client and customer data, documentation, and notes with historical context. Kinbrio also
+        enables secure and encrypted communication with clients through dedicated Matrix rooms. Meanwhile, supplier
+        management becomes a breeze with seamless tracking, meeting, and reporting capabilities.</p>
+    </div>
+  </div>
+
+  <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Efficient Inventory Management</b></p>
+      <hr />
+      <p>Stay on top of your products with our comprehensive inventory management system. From cost and pricing to
+        quantities and documentation, Kinbrio helps you optimize your inventory and streamline sales reporting.</p>
+    </div>
+  </div>
+
+  <div class=" col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>AI-Powered Insights for Smart Decision Making</b></p>
+      <hr />
+      <p>Harness the power of AI to answer your organizational questions quickly. Our assistants powered with LLMs
+        fine tuned on your business can help you find
+        historical chats and provide assistance with answering simple questions, saving you valuable time and effort.
+      </p>
+    </div>
+  </div>
+
+  <div class="col-sm-12 col-md-6 col-lg-3 flex-center justified">
+    <div class="backed centered">
+      <p class="emphasized"><b>Creating Your Digital Presence with Kinbrio</b></p>
+      <hr />
+      <p>Turn your ideas into reality with Kinbrio's full suite of services. From generating landing pages and product
+        pages to custom web applications and technical consulting, we make sure your business operates at its full
+        potential.</p>
+    </div>
+  </div>
+
+  <div class="backed centered col-sm-12 col-md-12 col-lg-12 centered justified" style="max-width: 90%;">
+    <p><b>Join Kinbrio Today!</b></p>
+    <hr />
+    <p>Experience the power of Kinbrio in revolutionizing your business. Contact us now to explore how our innovative
+      software platform can take your organization to new heights. Together, let's build a future of success and
+      growth with Kinbrio!</p>
+    <a class="button" href="/login">Login</a>
+    <a class="button" href="/register">Sign Up!</a>
   </div>
 </div>
 <div class="backed centered">
