--- a/templates/service_item.html
+++ b/templates/service_item.html
@@ -89,7 +89,7 @@
       {% endif %}
 
       post_form("add_service_item_form", "/service_item", data => {
-        let key = "{{service_item.key}}"
+        const key = "{{service_item.key}}"
         data.key = key == "" ? "00000000-0000-0000-0000-000000000000" : key
         data.organization_key = "{{user.organization_key}}"
         data.external_accounting_id = data.external_accounting_id ||"{{service_item.external_accounting_id}}"
@@ -117,7 +117,7 @@
         data.updated = data.updated || 0;
         return data;
       }, (response_text) => {
-        let object = JSON.parse(response_text);
+        const object = JSON.parse(response_text);
         window.location.href = `/service_item/${object.key}`
       });
     })
